--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,7 +15,7 @@ on:
       hugoVersion:
         description: "Hugo Version"
         required: false
-        default: "0.83.0"
+        default: "0.105.0"
 
 # Allow one concurrent deployment
 concurrency:
@@ -50,7 +50,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: exampleSite
+          ref: gh-pages
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v1
