--- a/config.yml
+++ b/config.yml
@@ -62,7 +62,7 @@ params:
 
   label:
     text: "fzzzn."
-    icon: /apple-touch-icon.png
+    # icon: /apple-touch-icon.png
     iconHeight: 35
 
   # profile-mode
