edit github workflows

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -55,8 +55,8 @@ jobs:
         uses: actions/configure-pages@v1
       - name: Get Theme
         run: git submodule update --init --recursive
-      # - name: Update theme to Latest commit
-      #   run: git submodule update --remote --merge
+      - name: Update theme to Latest commit
+        run: git submodule update --remote --merge
       - name: Build with Hugo
         run: |
           hugo \
