change twitter username

--- a/config.yml
+++ b/config.yml
@@ -82,7 +82,7 @@ params:
 
   socialIcons: 
     - name: "twitter"
-      url: "https://twitter.com/eenthlh"
+      url: "https://twitter.com/nuggetgeprek_"
     - name: "instagram"
       url: "https://instagram.com/eenthlh"
     - name: "github"
