--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ paginate: 5
 theme: "PaperMod"
 
 enableInlineShortcodes: true
-enableRobotsTXT: true
+enableRobotsTXT: false
 buildDrafts: false
 buildFuture: false
 buildExpired: false
